--- a/src/app/_components/BurgerMenu/styles.scss
+++ b/src/app/_components/BurgerMenu/styles.scss
@@ -61,7 +61,7 @@
   top: 0;
   height: 100dvh;
   width: 100%;
-  background-color: #0a0a0a;
+  background-color: #0a0a0a80;
   display: flex;
   justify-content: center;
   align-items: center;
