--- a/src/app/styles.scss
+++ b/src/app/styles.scss
@@ -1,5 +1,47 @@
 .home-view {
-  height: calc(1°°dvh - 4rem);
-  display:flex
-  justify-content;
+  height: calc(100dvh - 12rem);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+
+  &__picture-section {
+    position: relative;
+
+    &__picture {
+      height: 30rem;
+      width: 30rem;
+      object-fit: cover;
+    }
+  }
+
+  .infos-container {
+    font-size: 3rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    scroll-snap-type: y mandatory;
+    overflow-y: scroll;
+    height: 100%;
+    scroll-behavior: smooth;
+
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+
+    ::-webkit-scrollbar {
+      display: none;
+    }
+
+    .info {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      scroll-snap-align: start;
+      min-height: 100%;
+      width: 80%;
+      padding: 1rem 0;
+    }
+  }
 }
