--- a/src/app/styles.scss
+++ b/src/app/styles.scss
@@ -9,9 +9,15 @@
     position: relative;
 
     &__picture {
-      height: 30rem;
-      width: 30rem;
+      height: 50rem;
+      width: 50rem;
       object-fit: cover;
+      z-index: 1;
+
+      img {
+        border-radius: 50%;
+        z-index: -1;
+      }
     }
   }
 
