--- a/src/app/styles.scss
+++ b/src/app/styles.scss
@@ -1,23 +1,49 @@
 .home-view {
   height: calc(100dvh - 12rem);
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   flex-direction: column;
 
   &__picture-section {
     position: relative;
+    width: 100%; 
+    display: flex;
+    justify-content: center; 
+    border-bottom: 0.4rem solid white;
+
+
+    &__video {
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 100%;
+      width: 100%;
+      object-fit: cover;
+    }
 
     &__picture {
-      height: 50rem;
-      width: 50rem;
-      object-fit: cover;
-      z-index: 1;
+      position: relative;
+      top: 50%;
+      height: 40rem;
+      width: 40rem;
+      filter:drop-shadow(0 0 0.5rem black);
+
 
       img {
         border-radius: 50%;
-        z-index: -1;
+        object-fit: cover;
+        z-index: 1;
+        border-bottom: 0.4rem solid white;
       }
+    }
+
+    &__title {
+      position:absolute;
+      top:100%;
+      left:0;
+      font-size: 4rem;
+      margin-left:4rem;
     }
   }
 
