--- a/src/app/styles.scss
+++ b/src/app/styles.scss
@@ -1,79 +1,39 @@
 .home-view {
-  height: calc(100dvh - 12rem);
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  flex-direction: column;
-
-  &__picture-section {
-    position: relative;
-    width: 100%; 
-    display: flex;
-    justify-content: center; 
-    border-bottom: 0.4rem solid white;
-
-
-    &__video {
-      position: absolute;
-      top: 0;
-      left: 0;
-      height: 100%;
-      width: 100%;
-      object-fit: cover;
-    }
-
-    &__picture {
-      position: relative;
-      top: 50%;
-      height: 40rem;
-      width: 40rem;
-      filter:drop-shadow(0 0 0.5rem black);
-
-
-      img {
-        border-radius: 50%;
-        object-fit: cover;
-        z-index: 1;
-        border-bottom: 0.4rem solid white;
-      }
-    }
-
-    &__title {
-      position:absolute;
-      top:100%;
-      left:0;
-      font-size: 4rem;
-      margin-left:4rem;
-    }
-  }
-
-  .infos-container {
-    font-size: 3rem;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    scroll-snap-type: y mandatory;
-    overflow-y: scroll;
-    height: 100%;
-    scroll-behavior: smooth;
 
-    -ms-overflow-style: none;
-    scrollbar-width: none;
+    .infos-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
 
-    ::-webkit-scrollbar {
-      display: none;
+        &__snapscroll {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            text-align: center;
+            scroll-snap-align: start;
+            scroll-snap-stop: always;
+            row-gap: 4rem;
+
+            &__title {
+                font-size: 4rem;
+            }
+
+            &__content {
+                font-size: 3rem;
+
+                span {
+                    background: linear-gradient(
+                        90deg,
+                        rgba(2, 0, 36, 1) 0%,
+                        rgba(9, 9, 121, 1) 35%,
+                        rgba(0, 212, 255, 1) 100%
+                    );
+                    -webkit-background-clip: text;
+                    -webkit-text-fill-color: transparent;
+                }
+            }
+        }
     }
-
-    .info {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      scroll-snap-align: start;
-      min-height: 100%;
-      width: 80%;
-      padding: 1rem 0;
-    }
-  }
 }
