--- a/src/app/_components/ViewLayout/styles.scss
+++ b/src/app/_components/ViewLayout/styles.scss
@@ -1,7 +1,13 @@
 .view-layout-component {
-    padding: 28rem 2rem 0;
+    margin: 0 auto;
+    max-width: 120rem;
+    padding: 0 2rem;
+
+    @media screen and (min-width: 768px) {
+        padding: 0 4rem;
+    }
 
     @media screen and (min-width: 1024px) {
-        padding: 20rem 4rem 0;
+        padding: 0 6rem;
     }
 }
