--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -12,7 +12,8 @@
 
 html,
 body {
-    max-width: 100vw;
+    height: 100dvh;
+    max-width: 100dvw;
     overflow-x: hidden;
     font-size: 62.5%;
 }
