feat(portfolio): added google map api

--- a/src/app/_components/Header/styles.scss
+++ b/src/app/_components/Header/styles.scss
@@ -59,6 +59,7 @@
             @media screen and (min-width: 1024px) {
                 top: 100%;
                 font-size: 2rem;
+                margin-block-start: 0.2rem;
                 margin-right: 4rem;
                 right: 0;
                 line-height: normal;
