--- a/src/app/styles.scss
+++ b/src/app/styles.scss
@@ -1,45 +1,19 @@
 .home-view {
+    height: 100%;
     display: flex;
-    justify-content: flex-start;
-    align-items: center;
     flex-direction: column;
+    justify-content: center;
+    margin-block-start: 10rem;
 
-    &__picture-section {
-        position: relative;
-        width: 100%; // Set back to full width
-        display: flex;
-        justify-content: center; // Center the picture horizontally
-
-        &__video {
-            position: absolute;
-            top: 0;
-            left: 0;
-            height: 100%;
-            width: 100%;
-            object-fit: cover;
-        }
-
-        &__picture {
-            position: relative;
-            height: 40rem;
-            width: 40rem;
-
-            img {
-                border-radius: 50%;
-                object-fit: cover;
-            }
-        }
+    @media screen and (min-width: 1024px) {
+        margin-block-start: unset;
     }
 
     .infos-container {
-        font-size: 3rem;
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
-        align-items: center;
+        height: fit-content;
+        font-size: 2rem;
         scroll-snap-type: y mandatory;
         overflow-y: scroll;
-        height: 100%;
         scroll-behavior: smooth;
 
         -ms-overflow-style: none;
@@ -49,15 +23,52 @@
             display: none;
         }
 
-        .info {
+        &__snapscroll {
+            scroll-padding: 3rem;
             display: flex;
             flex-direction: column;
-            align-items: center;
-            justify-content: center;
+            row-gap: 3rem;
+            height: 100%;
             scroll-snap-align: start;
-            min-height: 100%;
-            width: 80%;
-            padding: 1rem 0;
+            text-align: center;
+            justify-content: center;
+            align-items: center;
+
+            &__title {
+                font-size: 2.2rem;
+            }
+
+            &__content {
+                font-size: 1.5rem;
+                line-height: 200%;
+
+                span {
+                    background: linear-gradient(
+                        90deg,
+                        rgba(2, 0, 36, 1) 0%,
+                        rgba(9, 9, 121, 1) 35%,
+                        rgba(0, 212, 255, 1) 100%
+                    );
+                    background: -webkit-linear-gradient(
+                        90deg,
+                        rgba(2, 0, 36, 1) 0%,
+                        rgba(9, 9, 121, 1) 35%,
+                        rgba(0, 212, 255, 1) 100%
+                    );
+                    -webkit-background-clip: text;
+                    -webkit-text-fill-color: transparent;
+                }
+
+                .google-map {
+                    height: 25rem;
+                    width: 25rem;
+
+                    @media screen and (min-width: 1024px) {
+                        height: 40rem;
+                        width: 40rem;
+                    }
+                }
+            }
         }
     }
 }
