--- a/src/app/_components/Header/styles.scss
+++ b/src/app/_components/Header/styles.scss
@@ -42,17 +42,17 @@
             @media screen and (min-width: 1024px) {
                 top: 100%;
                 text-wrap: wrap;
-                font-size: 3rem;
+                font-size: 3.5rem;
                 margin-left: 4rem;
-                left: 0;
+                left: 8%;
             }
         }
 
         &__job {
             position: absolute;
             text-align: center;
-            bottom: -105%;
-            font-size: 1.5rem;
+            bottom: -110%;
+            font-size: 1.8rem;
             display: flex;
             flex-direction: column;
 
@@ -68,10 +68,10 @@
 
             @media screen and (min-width: 1024px) {
                 top: 100%;
-                font-size: 2rem;
+                font-size: 2.2rem;
                 margin-block-start: 0.2rem;
                 margin-right: 4rem;
-                right: 0;
+                right: 8%;
                 line-height: normal;
 
                 &__is-scrolling {
@@ -79,9 +79,6 @@
                     opacity: 1;
                     transform: translateY(0);
                 }
-            }
-
-            &__title {
             }
 
             &__period {
