--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,17 +1,19 @@
-:root {
-    --background: #ffffff;
-    --foreground: #171717;
-}
+// :root {
+//     --background: #ffffff;
+//     --foreground: #171717;
+// }
 
-@media (prefers-color-scheme: dark) {
-    :root {
-        --background: black;
-        --foreground: #ededed;
-    }
-}
+// @media (prefers-color-scheme: dark) {
+//     :root {
+//         --background: black;
+//         --foreground: #ededed;
+//     }
+// }
 
 html,
 body {
+    background-color: black;
+    color: white;
     height: 100dvh;
     max-width: 100dvw;
     font-size: 62.5%;
@@ -33,8 +35,8 @@ a {
     text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
-    html {
-        color-scheme: dark;
-    }
-}
+// @media (prefers-color-scheme: dark) {
+//     html {
+//         color-scheme: dark;
+//     }
+// }
