--- a/src/app/skills/styles.scss
+++ b/src/app/skills/styles.scss
@@ -1,13 +1,22 @@
 .skills-view {
-    margin-top: 12rem;
+    margin-top: 20rem;
     display: flex;
     justify-content: space-around;
     align-items: center;
     flex-direction: column;
     position: relative;
 
+    @media screen and (min-width: 768px) {
+        margin-top: 12rem;
+    }
+
     &__title {
-        font-size: 4rem;
+        font-size: 2.5rem;
+        text-align: center;
+
+        @media screen and (min-width: 768px) {
+            font-size: 3rem;
+        }
     }
 
     .carousel-item {
