--- a/src/app/skills/styles.scss
+++ b/src/app/skills/styles.scss
@@ -1,39 +1,30 @@
 .skills-view {
-    margin-top: 20rem;
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
     flex-direction: column;
     position: relative;
-
-    @media screen and (min-width: 768px) {
-        margin-top: 12rem;
-    }
+    height: 100%;
 
     &__title {
         font-size: 2.5rem;
         text-align: center;
+        margin-block: 10rem 5rem;
 
         @media screen and (min-width: 768px) {
             font-size: 3rem;
+            margin-block: 0 5rem;
         }
     }
 
-    .carousel-item {
-        height: 50dvh;
+    &__content {
+        padding: 1rem;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
         display: flex;
-        flex-direction: column;
-        row-gap: 5rem;
-
-        &__picture {
-            img {
-                border-radius: 50%;
-                object-fit: contain;
-            }
-        }
-
-        &__label {
-            font-size: 2rem;
-        }
+        gap: 2rem;
+        flex-wrap: wrap;
+        overflow-x: hidden;
     }
 }
