feat(portfolio): ts config from mwm

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -12,8 +12,8 @@
 
 html,
 body {
-    background-color: black;
-    color: white;
+    background-color: #020811;
+    color: #f2f4f7;
     height: 100dvh;
     max-width: 100dvw;
     font-size: 62.5%;
