--- a/src/app/_components/Header/styles.scss
+++ b/src/app/_components/Header/styles.scss
@@ -5,6 +5,10 @@
 
     &__is-scrolling {
         margin-bottom: 0;
+
+        @media screen and (min-width: 1024px) {
+            margin-bottom: 5rem;
+        }
     }
 
     @media screen and (min-width: 1024px) {
@@ -80,6 +84,11 @@
                 margin-right: 4rem;
                 right: 8%;
                 line-height: normal;
+
+                .header__is-scrolling & {
+                    opacity: 1;
+                    transform: translateY(0);
+                }
             }
 
             &__period {
