--- a/src/app/skills/styles.scss
+++ b/src/app/skills/styles.scss
@@ -13,7 +13,7 @@
 
         @media screen and (min-width: 768px) {
             font-size: 3rem;
-            margin-block: 0 5rem;
+            margin-block: 5rem 5rem;
         }
     }
 
