feat(portfolio): dynamic height commented

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -14,7 +14,7 @@ html,
 body {
     background-color: #020811;
     color: #f2f4f7;
-    height: 100dvh;
+    height: 100%;
     max-width: 100dvw;
     font-size: 62.5%;
 }
