--- a/src/app/styles.scss
+++ b/src/app/styles.scss
@@ -1,5 +1,5 @@
 .home-view {
-    height: 100%;
+    height: calc(100dvh - 25.5rem);
     display: flex;
     flex-direction: column;
     justify-content: center;
