--- a/src/components/ProjectCard/styles.scss
+++ b/src/components/ProjectCard/styles.scss
@@ -20,6 +20,7 @@
         flex-direction: row;
         column-gap: 2rem;
         justify-content: space-between;
+        width: 55rem;
     }
 
     &:hover {
