--- a/src/app/projects/styles.scss
+++ b/src/app/projects/styles.scss
@@ -3,32 +3,37 @@
     justify-content: space-around;
     align-items: center;
     flex-direction: column;
-    position: relative;
-    align-items: center;
-    height: 100%;
+    height: calc(100dvh - 25.5rem);
 
     &__title {
         font-size: 2.5rem;
         text-align: center;
         margin-block: 10rem 5rem;
 
-        @media screen and (min-width: 768px) {
+        @media screen and (min-width: 1024px) {
             font-size: 3rem;
             margin-block: 5rem 5rem;
         }
     }
 
     &__content {
-        height: 100%;
+        height: fit-content;
+        overflow-y: scroll;
+        display: flex;
+        flex-direction: column;
+        row-gap: 5rem;
 
-        &__mwm {
-            display: flex;
+        &__mwm,
+        &__leatherspa {
             flex-direction: column;
             justify-content: space-around;
             align-items: center;
+            row-gap: 2rem;
+
             &__title {
                 font-size: 2rem;
                 text-align: center;
+                margin-block-end: 5rem;
             }
 
             &__cards {
