--- a/src/app/skills/styles.scss
+++ b/src/app/skills/styles.scss
@@ -3,8 +3,9 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    position: relative;
-    height: 100%;
+    overflow: hidden;
+    height: calc(100dvh - 25.5rem);
+    // hack to make the height 100ù when sscrolling
 
     &__title {
         font-size: 2.5rem;
