--- a/src/app/skills/styles.scss
+++ b/src/app/skills/styles.scss
@@ -10,11 +10,11 @@
     &__title {
         font-size: 2.5rem;
         text-align: center;
-        margin-block: 10rem 5rem;
+        margin-block: 10rem 2rem;
 
         @media screen and (min-width: 768px) {
             font-size: 3rem;
-            margin-block: 5rem 5rem;
+            margin-block: 5rem 2rem;
         }
     }
 
@@ -27,5 +27,11 @@
         gap: 2rem;
         flex-wrap: wrap;
         overflow-x: hidden;
+
+        -ms-overflow-style: none; /* IE and Edge */
+        scrollbar-width: none; /* Firefox */
+        ::-webkit-scrollbar {
+            display: none;
+        }
     }
 }
