--- a/src/app/styles.scss
+++ b/src/app/styles.scss
@@ -7,11 +7,11 @@
     &__title {
         font-size: 2.5rem;
         text-align: center;
-        margin-block: 10rem 1rem;
+        margin-block: 10rem 2rem;
 
         @media screen and (min-width: 768px) {
             font-size: 3rem;
-            margin-block: 0 5rem;
+            margin-block: 5rem 2rem;
         }
     }
 
@@ -72,13 +72,15 @@
                 }
 
                 .google-map {
+                    margin-block: auto;
+                    margin-top: 2rem;
                     border: 0.2rem solid white;
                     height: 20rem;
-                    width: 20rem;
+                    width: 100%;
 
                     @media screen and (min-width: 1024px) {
                         height: 40rem;
-                        width: 40rem;
+                        width: 100%;
                     }
                 }
             }
