feat(portfolio): test to fix animate in production*

--- a/src/components/TechCard/styles.scss
+++ b/src/components/TechCard/styles.scss
@@ -3,6 +3,8 @@
     border-image-slice: 1;
     border-width: 0.3rem;
     padding: 1rem;
+    border-style: solid;
+
     border-image-source: linear-gradient(
         90deg,
         rgba(2, 0, 36, 1) 0%,
