--- a/src/components/ProjectCard/styles.scss
+++ b/src/components/ProjectCard/styles.scss
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     row-gap: 2rem;
+    border-style: solid;
     justify-content: space-between;
     border: 1rem solid;
     border-image-slice: 1;
@@ -14,6 +15,7 @@
         rgba(9, 9, 121, 1) 35%,
         rgba(0, 212, 255, 1) 100%
     );
+
     transition: border 0.8s ease-in-out, box-shadow 0.5s ease-in-out;
 
     @media screen and (min-width: 768px) {
