--- a/src/components/ProjectCard/styles.scss
+++ b/src/components/ProjectCard/styles.scss
@@ -2,14 +2,14 @@
     display: flex;
     flex-direction: column;
     row-gap: 2rem;
-    border-style: solid;
+    // border-style: solid;
     justify-content: space-between;
     border: 1rem solid;
-    border-image-slice: 1;
-    border-width: 0.3rem;
+    // border-image-slice: 1;
+    // border-width: 0.3rem;
     padding: 2rem;
     cursor: pointer;
-    border-image-source: linear-gradient(
+    border-image: linear-gradient(
         90deg,
         rgba(2, 0, 36, 1) 0%,
         rgba(9, 9, 121, 1) 35%,
@@ -26,7 +26,7 @@
     }
 
     &:hover {
-        border-image-source: linear-gradient(
+        border-image: linear-gradient(
             90deg,
             rgba(0, 212, 255, 1) 0%,
             rgba(9, 9, 121, 1) 35%,
