--- a/src/components/ProjectCard/styles.scss
+++ b/src/components/ProjectCard/styles.scss
@@ -9,12 +9,12 @@
     border-width: 0.3rem;
     padding: 2rem;
     cursor: pointer;
-    border-image: linear-gradient(
+    border-image-source: linear-gradient(
         90deg,
         rgba(2, 0, 36, 1) 0%,
         rgba(9, 9, 121, 1) 35%,
         rgba(0, 212, 255, 1) 100%
-    );
+    ) !important;
 
     transition: border 0.8s ease-in-out, box-shadow 0.5s ease-in-out;
 
@@ -26,12 +26,12 @@
     }
 
     &:hover {
-        border-image: linear-gradient(
+        border-image-source: linear-gradient(
             90deg,
             rgba(0, 212, 255, 1) 0%,
             rgba(9, 9, 121, 1) 35%,
             rgba(2, 0, 36, 1) 100%
-        );
+        ) !important;
         filter: brightness(1.2);
     }
 
