--- a/src/components/ProjectCard/styles.scss
+++ b/src/components/ProjectCard/styles.scss
@@ -2,19 +2,12 @@
     display: flex;
     flex-direction: column;
     row-gap: 2rem;
-    border-style: solid;
     justify-content: space-between;
-    border: 1rem solid;
-    border-image-slice: 1;
-    border-width: 0.3rem;
+    border: 0.2rem solid rgba(9, 9, 121, 1);
+    border-radius: 2rem;
+
     padding: 2rem;
     cursor: pointer;
-    border-image-source: linear-gradient(
-        90deg,
-        rgba(2, 0, 36, 1) 0%,
-        rgba(9, 9, 121, 1) 35%,
-        rgba(0, 212, 255, 1) 100%
-    ) !important;
 
     transition: border 0.8s ease-in-out, box-shadow 0.5s ease-in-out;
 
@@ -22,16 +15,12 @@
         flex-direction: row;
         column-gap: 2rem;
         justify-content: space-between;
-        width: 55rem;
+        width: fit-content;
     }
 
     &:hover {
-        border-image-source: linear-gradient(
-            90deg,
-            rgba(0, 212, 255, 1) 0%,
-            rgba(9, 9, 121, 1) 35%,
-            rgba(2, 0, 36, 1) 100%
-        ) !important;
+        border: 0.2rem solid rgba(0, 212, 255, 1);
+
         filter: brightness(1.2);
     }
 
