--- a/src/components/TechCard/styles.scss
+++ b/src/components/TechCard/styles.scss
@@ -1,34 +1,20 @@
 .tech-card-component {
-    border: 1rem solid;
-    border-image-slice: 1;
-    border-width: 0.3rem;
+    border: 0.2rem solid rgba(9, 9, 121, 1);
+    border-radius: 2rem;
     padding: 1rem;
-    border-style: solid;
-
-    border-image-source: linear-gradient(
-        90deg,
-        rgba(2, 0, 36, 1) 0%,
-        rgba(9, 9, 121, 1) 35%,
-        rgba(0, 212, 255, 1) 100%
-    );
     display: flex;
     flex-direction: column;
     height: fit-content;
     align-items: center;
     width: 30rem;
     height: 30rem;
-
     row-gap: 1rem;
 
     transition: border 0.8s ease-in-out, box-shadow 0.5s ease-in-out;
 
     &:hover {
-        border-image-source: linear-gradient(
-            90deg,
-            rgba(0, 212, 255, 1) 0%,
-            rgba(9, 9, 121, 1) 35%,
-            rgba(2, 0, 36, 1) 100%
-        );
+        border: 0.2rem solid rgba(0, 212, 255, 1);
+
         filter: brightness(1.2);
     }
 
