--- a/src/components/TechCard/styles.scss
+++ b/src/components/TechCard/styles.scss
@@ -10,7 +10,7 @@
     height: 30rem;
     row-gap: 1rem;
 
-    transition: border 0.8s ease-in-out, box-shadow 0.5s ease-in-out;
+    transition: border 0.8s ease-in-out;
 
     &:hover {
         border: 0.2rem solid rgba(0, 212, 255, 1);
