--- a/src/components/ProjectCard/styles.scss
+++ b/src/components/ProjectCard/styles.scss
@@ -3,11 +3,21 @@
     flex-direction: column;
     row-gap: 2rem;
     justify-content: space-between;
-    border: 0.2rem solid rgba(9, 9, 121, 1);
-    border-radius: 2rem;
+    // border: 0.2rem solid rgba(9, 9, 121, 1);
+    // border-radius: 2rem;
+
+    border: 0.2rem solid transparent !important;
+    border-image-slice: 1 !important;
+    border-width: 0.3rem;
 
     padding: 2rem;
     cursor: pointer;
+
+    border-image-source: linear-gradient(
+        90deg,
+        rgba(2, 0, 36, 1) 0%,
+        rgba(0, 212, 255, 1) 100%
+    ) !important;
 
     transition: border 0.8s ease-in-out, box-shadow 0.5s ease-in-out;
 
@@ -19,8 +29,12 @@
     }
 
     &:hover {
-        border: 0.2rem solid rgba(0, 212, 255, 1);
-
+        // border: 0.2rem solid rgba(0, 212, 255, 1);
+        border-image-source: linear-gradient(
+            90deg,
+            rgba(0, 212, 255, 1) 0%,
+            rgba(2, 0, 36, 1) 100%
+        ) !important;
         filter: brightness(1.2);
     }
 
