--- a/src/app/projects/styles.scss
+++ b/src/app/projects/styles.scss
@@ -3,6 +3,11 @@
     align-items: center;
     flex-direction: column;
     height: calc(100dvh - 25.5rem);
+    padding-block-end: 2rem;
+
+    &--is-scrolling {
+        height: calc(100dvh - 15.5rem);
+    }
 
     &__title {
         font-size: 2.5rem;
