--- a/src/app/skills/styles.scss
+++ b/src/app/skills/styles.scss
@@ -3,9 +3,12 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    overflow: hidden;
+    padding-block-end: 2rem;
     height: calc(100dvh - 25.5rem);
-    // hack to make the height 100ù when sscrolling
+
+    &--is-scrolling {
+        height: calc(100dvh - 15.5rem);
+    }
 
     &__title {
         font-size: 2.5rem;
