--- a/src/app/styles.scss
+++ b/src/app/styles.scss
@@ -1,8 +1,9 @@
 .home-view {
-    height: calc(100dvh - 25.5rem);
+    height: calc(100dvh - 15.5rem);
     display: flex;
     flex-direction: column;
     justify-content: center;
+    padding-block-end: 2rem;
 
     &__title {
         font-size: 2.5rem;
