--- a/src/app/current/styles.scss
+++ b/src/app/current/styles.scss
@@ -25,11 +25,12 @@
         height: 100%;
         display: flex;
         flex-direction: column;
-        justify-content: center;
+        justify-content: flex-start;
         row-gap: 2rem;
 
         @media screen and (min-width: 768px) {
             font-size: 2rem;
+            justify-content: center;
         }
     }
 }
