--- a/src/app/styles.scss
+++ b/src/app/styles.scss
@@ -1,9 +1,13 @@
 .home-view {
-    height: calc(100dvh - 15.5rem);
+    height: calc(100dvh - 25.5rem);
     display: flex;
     flex-direction: column;
     justify-content: center;
     padding-block-end: 2rem;
+
+    &--is-scrolling {
+        height: calc(100dvh - 15.5rem);
+    }
 
     &__title {
         font-size: 2.5rem;
