--- a/src/app/contacts/styles.scss
+++ b/src/app/contacts/styles.scss
@@ -41,7 +41,11 @@
             display: flex;
             column-gap: 2rem;
             align-items: center;
-            font-size: 3rem;
+            font-size: 2rem;
+
+            @media screen and (min-width: 1024px) {
+                font-size: 3rem;
+            }
 
             .icon {
                 cursor: pointer;
